k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: stas
  labels:
    app.kubernetes.io/managed-by: helm
    environment: production
